# aws-device-test

./: setup.sh
subscribe/: CMakeLists.txt  TestConfig.h.in
